--- a/index.html
+++ b/index.html
@@ -13,43 +13,42 @@
                 <input type="text" placeholder="Search">
             </div>
             <ul class="nav-items">
-                <li><a href="#" class="nav-item">Discover</a></li>
-                <li><a href="#" class="nav-item">Work</a></li>
-                <li><a href="#" class="nav-item">Play</a></li>
-                <li><a href="#" class="nav-item">Develop</a></li>
-                <li><a href="#" class="nav-item">Categories</a></li>
-                <li><a href="#" class="nav-item">Updates</a></li>
+                <li><a href="#" class="nav-item">Marketing & Sales</a></li>
+                <li><a href="#" class="nav-item">Customer Support</a></li>
+                <li><a href="#" class="nav-item">Customer Success</a></li>
+                <li><a href="#" class="nav-item">Business Operations</a></li>
+                <li><a href="#" class="nav-item">Product</a></li>
             </ul>
         </nav>
         <main class="main-content">
             <section class="featured-banner">
-                <h2>MAJOR UPDATE</h2>
-                <h1>See what's new in Company Projects</h1>
-                <p>New features, improved collaboration, and more.</p>
+                <h2>AI INNOVATION</h2>
+                <h1>See what's new in IgniteTech</h1>
+                <p>AI everywhere: processes, tools, and products</p>
             </section>
             <section class="featured-projects">
                 <div class="featured-project">
                     <h2>FEATURED PROJECT</h2>
-                    <h3>Fyx - AI Content Creation Assistant</h3>
-                    <p>Streamline your content creation process with AI-powered tools.</p>
+                    <h3>Fyx - A team of digital humans at your service</h3>
+                    <p>Fyx yourself a Linkedin post, a blog or whatever you like</p>
                     <img src="images/fyx.png" alt="Fyx Interface" class="featured-image">
                 </div>
                 <div class="featured-project">
-                    <h2>NEW PROJECT</h2>
-                    <h3>AI-Driven Analytics</h3>
-                    <p>Harness the power of our new AI analytics suite.</p>
+                    <h2>FEATURED PROJECT</h2>
+                    <h3>Email Engine</h3>
+                    <p>Unified AI email response system</p>
                     <!-- Placeholder for second featured project image -->
                     <div class="placeholder-image">AI Analytics Image</div>
                 </div>
             </section>
             <section class="all-projects">
-                <h2>Try These Company Favourites</h2>
+                <h2>Explore some of our favorites</h2>
                 <div class="project-list">
                     <div class="project-item">
                         <img src="images/fyx-icon.png" alt="Fyx Icon" class="project-icon">
                         <div class="project-info">
-                            <h3>Fyx</h3>
-                            <p>AI Content Creation Assistant</p>
+                            <h3>Arcanum</h3>
+                            <p>AI at your fingertips in Google Sheets</p>
                         </div>
                         <a href="pages/fyx.html" class="get-button">GET</a>
                     </div>
@@ -57,16 +56,16 @@
                     <div class="project-item">
                         <div class="placeholder-icon"></div>
                         <div class="project-info">
-                            <h3>Project 2</h3>
-                            <p>Description of Project 2</p>
+                            <h3>LLM Meisterbot</h3>
+                            <p>Supercharge team chats with collective AI prompting</p>
                         </div>
                         <a href="#" class="get-button">GET</a>
                     </div>
                     <div class="project-item">
                         <div class="placeholder-icon"></div>
                         <div class="project-info">
-                            <h3>Project 3</h3>
-                            <p>Description of Project 3</p>
+                            <h3>Opera</h3>
+                            <p>AI-First Customer Care</p>
                         </div>
                         <a href="#" class="get-button">GET</a>
                     </div>
