--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Company App Store</title>
+    <title>IgniteTech App Store</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
                 <input type="text" placeholder="Search">
             </div>
             <ul class="nav-items">
-                <li><a href="#" class="nav-item">Marketing & Sales</a></li>
+                <li><a href="teams/marketing.html" class="nav-item">Marketing & Sales</a></li>
                 <li><a href="#" class="nav-item">Customer Support</a></li>
                 <li><a href="#" class="nav-item">Customer Success</a></li>
                 <li><a href="#" class="nav-item">Business Operations</a></li>
@@ -28,33 +28,33 @@
             </section>
             <section class="featured-projects">
                 <div class="featured-project">
-                    <h2>FEATURED PROJECT</h2>
-                    <h3>Fyx - A team of digital humans at your service</h3>
-                    <p>Fyx yourself a Linkedin post, a blog or whatever you like</p>
-                    <img src="images/fyx.png" alt="Fyx Interface" class="featured-image">
+                    <h3>FEATURED PROJECT</h3>
+                    <h2>Fyx - A team of digital humans at your service</h2>
+                    <p>Fyx yourself a LinkedIn post, a blog or whatever you like</p>
+                    <img src="https://thrive.ignitetech.com/servlet/JiveServlet/downloadImage/102-385345-2-5146995/631-369/Fyx.png" alt="Fyx Interface" class="featured-image">
+                    <a href="projects/fyx.html" class="get-button">GET</a>
                 </div>
                 <div class="featured-project">
-                    <h2>FEATURED PROJECT</h2>
-                    <h3>Email Engine</h3>
+                    <h3>FEATURED PROJECT</h3>
+                    <h2>Email Engine</h2>
                     <p>Unified AI email response system</p>
-                    <!-- Placeholder for second featured project image -->
-                    <div class="placeholder-image">AI Analytics Image</div>
+                    <img src="images/email-engine.png" alt="Email Engine Interface" class="featured-image">
+                    <a href="#" class="get-button">GET</a>
                 </div>
             </section>
             <section class="all-projects">
                 <h2>Explore some of our favorites</h2>
                 <div class="project-list">
                     <div class="project-item">
-                        <img src="images/fyx-icon.png" alt="Fyx Icon" class="project-icon">
+                        <img src="images/icon.png" alt="Icon" class="project-icon">
                         <div class="project-info">
                             <h3>Arcanum</h3>
                             <p>AI at your fingertips in Google Sheets</p>
                         </div>
-                        <a href="pages/fyx.html" class="get-button">GET</a>
+                        <a href="#" class="get-button">GET</a>
                     </div>
-                    <!-- Add more project items here -->
                     <div class="project-item">
-                        <div class="placeholder-icon"></div>
+                        <img src="images/icon.png" alt="Icon" class="project-icon">
                         <div class="project-info">
                             <h3>LLM Meisterbot</h3>
                             <p>Supercharge team chats with collective AI prompting</p>
@@ -62,7 +62,7 @@
                         <a href="#" class="get-button">GET</a>
                     </div>
                     <div class="project-item">
-                        <div class="placeholder-icon"></div>
+                        <img src="images/icon.png" alt="Icon" class="project-icon">
                         <div class="project-info">
                             <h3>Opera</h3>
                             <p>AI-First Customer Care</p>
