--- a/teams/marketing.html
+++ b/teams/marketing.html
@@ -3,76 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IgniteTech App Store</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Marketing Team - IgniteTech</title>
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/team.css">
 </head>
 <body>
     <div class="app-container">
         <nav class="sidebar">
-            <div class="search-bar">
-                <input type="text" placeholder="Search">
-            </div>
-            <ul class="nav-items">
-                <li><a href="teams/marketing.html" class="nav-item">Marketing & Sales</a></li>
-                <li><a href="#" class="nav-item">Customer Support</a></li>
-                <li><a href="#" class="nav-item">Customer Success</a></li>
-                <li><a href="#" class="nav-item">Business Operations</a></li>
-                <li><a href="#" class="nav-item">Product</a></li>
-            </ul>
+            <!-- Sidebar content (same as index.html) -->
         </nav>
         <main class="main-content">
-            <section class="featured-banner">
-                <h2>AI INNOVATION</h2>
-                <h1>See what's new in IgniteTech</h1>
-                <p>AI everywhere: processes, tools, and products</p>
-            </section>
-            <section class="featured-projects">
-                <div class="featured-project">
-                    <h3>FEATURED PROJECT</h3>
-                    <h2>Fyx - A team of digital humans at your service</h2>
-                    <p>Fyx yourself a LinkedIn post, a blog or whatever you like</p>
-                    <img src="https://thrive.ignitetech.com/servlet/JiveServlet/downloadImage/102-385345-2-5146995/631-369/Fyx.png" alt="Fyx Interface" class="featured-image">
-                    <a href="projects/fyx.html" class="get-button">GET</a>
-                </div>
-                <div class="featured-project">
-                    <h3>FEATURED PROJECT</h3>
-                    <h2>Email Engine</h2>
-                    <p>Unified AI email response system</p>
-                    <img src="images/email-engine.png" alt="Email Engine Interface" class="featured-image">
-                    <a href="#" class="get-button">GET</a>
+            <header class="team-header">
+                <h1>Marketing Team</h1>
+                <p>Driving growth and brand awareness</p>
+            </header>
+            <section class="team-projects">
+                <h2>Team Projects</h2>
+                <div class="project-grid">
+                    <div class="project-card">
+                        <img src="../images/Fyx.png" alt="Fyx" class="project-icon">
+                        <h3>Fyx</h3>
+                        <p>AI Content Creation Assistant</p>
+                        <a href="../projects/fyx.html" class="project-link">View Project</a>
+                    </div>
+                    <!-- Add more project cards as needed -->
                 </div>
             </section>
-            <section class="all-projects">
-                <h2>Explore some of our favorites</h2>
-                <div class="project-list">
-                    <div class="project-item">
-                        <img src="images/icon.png" alt="Icon" class="project-icon">
-                        <div class="project-info">
-                            <h3>Arcanum</h3>
-                            <p>AI at your fingertips in Google Sheets</p>
-                        </div>
-                        <a href="#" class="get-button">GET</a>
+            <section class="team-members">
+                <h2>Team Members</h2>
+                <div class="member-grid">
+                    <div class="member-card">
+                        <img src="../images/team-member1.jpg" alt="Team Member 1" class="member-photo">
+                        <h3>John Doe</h3>
+                        <p>Marketing Director</p>
                     </div>
-                    <div class="project-item">
-                        <img src="images/icon.png" alt="Icon" class="project-icon">
-                        <div class="project-info">
-                            <h3>LLM Meisterbot</h3>
-                            <p>Supercharge team chats with collective AI prompting</p>
-                        </div>
-                        <a href="#" class="get-button">GET</a>
+                    <div class="member-card">
+                        <img src="../images/team-member2.jpg" alt="Team Member 2" class="member-photo">
+                        <h3>Jane Smith</h3>
+                        <p>Content Strategist</p>
                     </div>
-                    <div class="project-item">
-                        <img src="images/icon.png" alt="Icon" class="project-icon">
-                        <div class="project-info">
-                            <h3>Opera</h3>
-                            <p>AI-First Customer Care</p>
-                        </div>
-                        <a href="#" class="get-button">GET</a>
-                    </div>
+                    <!-- Add more team member cards as needed -->
                 </div>
             </section>
         </main>
     </div>
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
