making buttons work 3git add .

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <h2>Fyx - A team of digital humans at your service</h2>
                     <p>Fyx yourself a LinkedIn post, a blog or whatever you like</p>
                     <img src="https://thrive.ignitetech.com/servlet/JiveServlet/downloadImage/102-385345-2-5146995/631-369/Fyx.png" alt="Fyx Interface" class="featured-image">
-                    <a href="projects/fyx.html" class="get-button">GET</a>
+                    <a href="pages/fyx.html" class="get-button">GET</a>
                 </div>
                 <div class="featured-project">
                     <h3>FEATURED PROJECT</h3>
