new project page

--- a/pages/fyx.html
+++ b/pages/fyx.html
@@ -10,73 +10,41 @@
 <body>
     <div class="app-container">
         <nav class="sidebar">
-            <!-- Sidebar content (same as homepage) -->
+            <!-- Copy your sidebar content from index.html -->
         </nav>
-        <main class="main-content project-page">
+        <main class="main-content">
             <header class="project-header">
-                <a href="../index.html" class="back-button">&lt; Back</a>
+                <a href="../index.html" class="back-link">&lt; Back</a>
                 <img src="../images/fyx-icon.png" alt="Fyx Icon" class="project-icon">
-                <div class="project-title">
-                    <h1>Fyx</h1>
-                    <p>AI Content Creation Assistant</p>
-                </div>
+                <h1>Fyx</h1>
+                <p class="subtitle">AI Content Creation Assistant</p>
                 <button class="get-button">Get</button>
             </header>
             <section class="project-meta">
-                <div class="meta-item">
-                    <span class="meta-value">4.4</span>
-                    <span class="meta-label">245K Ratings</span>
-                </div>
-                <div class="meta-item">
-                    <span class="meta-value">4+</span>
-                    <span class="meta-label">Years Old</span>
-                </div>
-                <div class="meta-item">
-                    <span class="meta-value">No. 1</span>
-                    <span class="meta-label">Productivity</span>
-                </div>
-                <div class="meta-item">
-                    <span class="meta-value">
-                        <img src="../images/microsoft-icon.png" alt="Microsoft" class="developer-icon">
-                    </span>
-                    <span class="meta-label">Microsoft Corporation</span>
-                </div>
-                <div class="meta-item">
-                    <span class="meta-value">EN</span>
-                    <span class="meta-label">+ 25 More</span>
-                </div>
-                <div class="meta-item">
-                    <span class="meta-value">1.26</span>
-                    <span class="meta-label">GB</span>
-                </div>
+                <div class="meta-item"><strong>4.4</strong> 245K Ratings</div>
+                <div class="meta-item"><strong>4+</strong> Years Old</div>
+                <div class="meta-item"><strong>No. 1</strong> Productivity</div>
+                <div class="meta-item"><img src="../images/microsoft-icon.png" alt="Microsoft"> Microsoft Corporation</div>
+                <div class="meta-item"><strong>EN</strong> + 25 More</div>
+                <div class="meta-item"><strong>1.26 GB</strong></div>
             </section>
             <section class="project-description">
                 <p>Fyx is designed to simulate a collaborative content development process, encompassing content creation, editing, and design. We're a small team with limited resources - Fyx is a force multiplier. Not only does it increase the quantity of our output, it helps us ensure quality, coherence and brand alignment throughout the content lifecycle. It was created to democratize the marketing function and make marketing resources easily available for the entire organization.</p>
             </section>
             <section class="project-preview">
                 <h2>Preview</h2>
-                <div class="preview-carousel">
-                    <img src="../images/fyx-preview1.png" alt="Fyx Preview 1" class="preview-image">
-                    <img src="../images/fyx-preview2.png" alt="Fyx Preview 2" class="preview-image">
-                    <!-- Add more preview images as needed -->
+                <div class="preview-images">
+                    <img src="../images/fyx-preview1.png" alt="Fyx Preview 1">
+                    <img src="../images/fyx-preview2.png" alt="Fyx Preview 2">
                 </div>
                 <button class="play-video-button">Play Video</button>
             </section>
-            <section class="project-info">
+            <section class="project-information">
                 <h2>Information</h2>
                 <p><strong>Developer:</strong> Microsoft Corporation</p>
                 <p><strong>Team:</strong> Marketing</p>
-                <!-- Add more project information as needed -->
             </section>
         </main>
-    </div>
-    <div class="video-modal" id="videoModal">
-        <div class="modal-content">
-            <span class="close-modal">&times;</span>
-            <div class="video-container">
-                <!-- Vidyard embed code will go here -->
-            </div>
-        </div>
     </div>
     <script src="../js/script.js"></script>
 </body>
