project page updates

--- a/pages/fyx.html
+++ b/pages/fyx.html
@@ -6,43 +6,72 @@
     <title>Fyx - AI Content Creation Assistant</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/project.css">
+    <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="app-container">
         <nav class="sidebar">
             <!-- Copy your sidebar content from index.html -->
+            <div class="search-bar">
+                <input type="text" placeholder="Search">
+            </div>
+            <ul class="nav-items">
+                <li><a href="../index.html" class="nav-item">Home</a></li>
+                <li><a href="../teams/marketing.html" class="nav-item">Marketing & Sales</a></li>
+                <li><a href="#" class="nav-item">Customer Support</a></li>
+                <li><a href="#" class="nav-item">Customer Success</a></li>
+                <li><a href="#" class="nav-item">Business Operations</a></li>
+                <li><a href="#" class="nav-item">Product</a></li>
+            </ul>
         </nav>
         <main class="main-content">
             <header class="project-header">
                 <a href="../index.html" class="back-link">&lt; Back</a>
                 <img src="../images/fyx-icon.png" alt="Fyx Icon" class="project-icon">
-                <h1>Fyx</h1>
-                <p class="subtitle">AI Content Creation Assistant</p>
+                <div class="project-title">
+                    <h1>Fyx</h1>
+                    <p class="subtitle">AI Content Creation Assistant</p>
+                    <div class="project-links">
+                        <a href="https://fyx.ignitetech.com" class="project-link">
+                            <i class="fas fa-globe"></i> Website
+                        </a>
+                        <a href="https://github.com/trilogy-group/ignitetech-fyx" class="project-link">
+                            <i class="fab fa-github"></i> GitHub
+                        </a>
+                    </div>
+                </div>
                 <button class="get-button">Get</button>
             </header>
-            <section class="project-meta">
-                <div class="meta-item"><strong>4.4</strong> 245K Ratings</div>
-                <div class="meta-item"><strong>4+</strong> Years Old</div>
-                <div class="meta-item"><strong>No. 1</strong> Productivity</div>
-                <div class="meta-item"><img src="../images/microsoft-icon.png" alt="Microsoft"> Microsoft Corporation</div>
-                <div class="meta-item"><strong>EN</strong> + 25 More</div>
-                <div class="meta-item"><strong>1.26 GB</strong></div>
-            </section>
             <section class="project-description">
                 <p>Fyx is designed to simulate a collaborative content development process, encompassing content creation, editing, and design. We're a small team with limited resources - Fyx is a force multiplier. Not only does it increase the quantity of our output, it helps us ensure quality, coherence and brand alignment throughout the content lifecycle. It was created to democratize the marketing function and make marketing resources easily available for the entire organization.</p>
             </section>
             <section class="project-preview">
                 <h2>Preview</h2>
                 <div class="preview-images">
-                    <img src="../images/fyx-preview1.png" alt="Fyx Preview 1">
-                    <img src="../images/fyx-preview2.png" alt="Fyx Preview 2">
+                    <img src="https://i.ibb.co/99JXMM5/image.png" alt="Fyx Preview 1">
+                    <img src="https://i.ibb.co/44S46JJ/image.png" alt="Fyx Preview 2">
                 </div>
                 <button class="play-video-button">Play Video</button>
             </section>
-            <section class="project-information">
-                <h2>Information</h2>
-                <p><strong>Developer:</strong> Microsoft Corporation</p>
-                <p><strong>Team:</strong> Marketing</p>
+            <section class="project-details">
+                <h2>Details</h2>
+                <div class="details-section">
+                    <h3>Tech Stack</h3>
+                    <ul>
+                        <li>React</li>
+                        <li>Node.js</li>
+                        <li>OpenAI API</li>
+                        <!-- Add more tech stack items as needed -->
+                    </ul>
+                </div>
+                <div class="details-section">
+                    <h3>Builder</h3>
+                    <p>Microsoft Corporation</p>
+                </div>
+                <div class="details-section">
+                    <h3>Team</h3>
+                    <p>Marketing</p>
+                </div>
             </section>
         </main>
     </div>
