--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
             </section>
             <section class="featured-projects">
                 <div class="featured-project">
-                    <h3>FEATURED PROJECT</h3>
-                    <h2>Fyx - A team of digital humans at your service</h2>
+                    <h3>Fyx</h3>
+                    <h2>A team of digital humans at your service</h2>
                     <p>Fyx yourself a LinkedIn post, a blog or whatever you like</p>
                     <img src="https://thrive.ignitetech.com/servlet/JiveServlet/downloadImage/102-385345-2-5146995/631-369/Fyx.png" alt="Fyx Interface" class="featured-image">
                     <a href="pages/fyx.html" class="get-button">GET</a>
                 </div>
                 <div class="featured-project">
-                    <h3>FEATURED PROJECT</h3>
-                    <h2>Email Engine</h2>
+                    <h3>Email engine</h3>
+                    <h2>Unified AI email response system</h2>
                     <p>Unified AI email response system</p>
                     <img src="images/email-engine.png" alt="Email Engine Interface" class="featured-image">
                     <a href="#" class="get-button">GET</a>
