--- a/teams/marketing.html
+++ b/teams/marketing.html
@@ -10,8 +10,19 @@
 <body>
     <div class="app-container">
         <nav class="sidebar">
-            <!-- Sidebar content (same as index.html) -->
-        </nav>
+            <nav class="sidebar">
+                <div class="search-bar">
+                    <input type="text" placeholder="Search">
+                </div>
+                <ul class="nav-items">
+                    <li><a href="../index.html" class="nav-item"><i class="fas fa-star"></i> Discover</a></li>
+                    <li><a href="../teams/marketing.html" class="nav-item"><i class="fas fa-bullhorn"></i> Marketing & Sales</a></li>
+                    <li><a href="../teams/customer-support.html" class="nav-item"><i class="fas fa-headset"></i> Customer Support</a></li>
+                    <li><a href="../teams/customer-success.html" class="nav-item"><i class="fas fa-users"></i> Customer Success</a></li>
+                    <li><a href="../teams/business-operations.html" class="nav-item"><i class="fas fa-chart-line"></i> Business Operations</a></li>
+                    <li><a href="../teams/product.html" class="nav-item"><i class="fas fa-cube"></i> Product</a></li>
+                </ul>
+            </nav>        </nav>
         <main class="main-content">
             <header class="team-header">
                 <h1>Marketing Team</h1>
