--- a/pages/fyx.html
+++ b/pages/fyx.html
@@ -11,17 +11,16 @@
 <body>
     <div class="app-container">
         <nav class="sidebar">
-            <!-- Copy your sidebar content from index.html -->
             <div class="search-bar">
                 <input type="text" placeholder="Search">
             </div>
             <ul class="nav-items">
-                <li><a href="../index.html" class="nav-item">Home</a></li>
-                <li><a href="../teams/marketing.html" class="nav-item">Marketing & Sales</a></li>
-                <li><a href="#" class="nav-item">Customer Support</a></li>
-                <li><a href="#" class="nav-item">Customer Success</a></li>
-                <li><a href="#" class="nav-item">Business Operations</a></li>
-                <li><a href="#" class="nav-item">Product</a></li>
+                <li><a href="../index.html" class="nav-item"><i class="fas fa-star"></i> Discover</a></li>
+                <li><a href="../teams/marketing.html" class="nav-item"><i class="fas fa-bullhorn"></i> Marketing & Sales</a></li>
+                <li><a href="../teams/customer-support.html" class="nav-item"><i class="fas fa-headset"></i> Customer Support</a></li>
+                <li><a href="../teams/customer-success.html" class="nav-item"><i class="fas fa-users"></i> Customer Success</a></li>
+                <li><a href="../teams/business-operations.html" class="nav-item"><i class="fas fa-chart-line"></i> Business Operations</a></li>
+                <li><a href="../teams/product.html" class="nav-item"><i class="fas fa-cube"></i> Product</a></li>
             </ul>
         </nav>
         <main class="main-content">
